git commit -m "SCRUM-37 <inclusao da imagem e exclusao da agenda>"

--- a/material.html
+++ b/material.html
@@ -69,14 +69,14 @@
       </article>
 
       <article class="ferramenta">
-        <img src="./img-site/agenda.png" alt="Agenda Semanal" />
-        <h3>Agenda Semanal</h3>
-        <p class="descricao">Agenda Semanal da Guariní</p>
-        <button type="button" class="btn-comprar" onclick="window.location.href='agenda.html'">Acessar</button>
+        <img src="./img-site/embreve.png" alt="Em Breve" />
+        <h3>Em Breve</h3>
+        <p class="descricao">Nova ferramenta em desenvolvimento</p>
+        <button type="button" class="btn-comprar" disabled>Indisponível</button>
       </article>
 
       <article class="ferramenta">
-        <img src="./shop/embreve.jpg" alt="Em Breve" />
+        <img src="./img-site/embreve.png" alt="Em Breve" />
         <h3>Em Breve</h3>
         <p class="descricao">Nova ferramenta em desenvolvimento</p>
         <button type="button" class="btn-comprar" disabled>Indisponível</button>
