publicação da matéria

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
               <img src="./img-site/noticia1.jpg" alt="Notícia 1">
             </div>
             <div class="noticia-conteudo-horizontal">
-              <h3>Guariní vence torneio regional</h3>
-              <p>Nossa equipe conquistou o primeiro lugar no torneio regional de Valorant, mostrando grande estratégia e trabalho em equipe.</p>
+              <h3>Guariní vence Kingdravôs</h3>
+              <p>Nossa equipe conquistou a primeira vitória pelo brasileirão série C.</p>
               <a href="noticias.html#noticia1" class="noticia-link">Leia mais</a>
             </div>
           </div>
