--- a/desempenho.html
+++ b/desempenho.html
@@ -102,7 +102,7 @@
     </section>
     
     <!-- 🔥 Correção: carregando como módulo -->
-    <script type="module" src="calculadora.js"></script>
+    <script src="calculadora.js"></script>
   </div>
 
   <footer>
