Alterações no botão de login/logout e menu responsivo

--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@
   </header>
 
   <!-- Info do usuário e botão de login/logout -->
-  <div class="user-info" id="userInfo">
-    Olá, <span id="userName"></span>!
+  <div class="user-container">
+    <button class="btn-login-topo" id="loginLogoutBtn">Login</button>
+    <div class="user-info" id="userInfo">
+      Olá, <span id="userName"></span>!
+    </div>
   </div>
-  <button class="btn-login-topo" id="loginLogoutBtn">Login</button>
 
   <main>
     <section id="home" class="hero">
