--- a/estatisticas-shad/show-result.html
+++ b/estatisticas-shad/show-result.html
@@ -21,7 +21,7 @@
         <div class="flex flex-col items-center w-full h-auto bg-gray-400 fixed top-0 left-0 right-0 z-10">
             <div class="flex justify-between w-full pt-4 pl-6 pr-12">
                 <div id="mainLogo" style="cursor: pointer;">
-                    <img src="./estatisticas-shad/images/backgrounds/copasonhos.png" width="80">
+                    <img src="images/backgrounds/copasonhos.png" width="80">
                 </div>
                 <div class="flex gap-x-2 pl-24 pt-2">
                     <span id="title-span" class="text-4xl font-bold text-black">DADOS</span>
