niveis de acesso a ferramenta configurado

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
   <footer>
     <p>&copy; 2025 Guariní e-sport. Todos os direitos reservados.</p>
     <p><a href="https://linktr.ee/guariniesports" target="_blank">Conheça nossas redes sociais</a></p>
-    <p>Created by: Lobo</p>
+    <p>Created by: Lobo & Shad</p>
   </footer>
 
   <!-- Firebase e Autenticação -->
