alterando as noticias para a NAth

--- a/noticia1.html
+++ b/noticia1.html
@@ -15,7 +15,7 @@
       <h1 class="noticia-titulo">Guariní vence partida contra Kingdravôs no Brasileirão Série C</h1>
       <div class="noticia-meta">
         <span>19 de Agosto, 2025</span> • 
-        <span>Por George "shad" Fernandes</span>
+        <span>Por Nathália "Nath" Lima</span>
       </div>
       <img src="./img-site/noticia1-grande.jpg" alt="Vitória" class="noticia-imagem">
     </header>
