--- a/noticia2.html
+++ b/noticia2.html
@@ -15,7 +15,7 @@
       <h1 class="noticia-titulo">Guariní vence a Aeos Red e se firma no top 3 da tabela</h1>
       <div class="noticia-meta">
         <span>22 de Agosto, 2025</span> • 
-        <span>Por George "shad" Fernandes</span>
+        <span>Por Nathália "Nath" Lima</span>
       </div>
       <img src="./img-site/noticia2-grande.jpg" alt="Vitória" class="noticia-imagem">
     </header>
