titulos das noticias

--- a/noticia2.html
+++ b/noticia2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Guariní vence torneio regional | Guariní e-sport</title>
+  <title>Guariní vence mais um desafio no Brasileirão | Guariní e-sport</title>
   <meta name="description" content="Guariní vence a Aeos Red e se firma no top 3 da tabela">
   <link rel="icon" href="favicon.png" type="image/png">
   <link rel="stylesheet" href="style.css">
