--- a/noticia1.html
+++ b/noticia1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Guariní vence torneio regional | Guariní e-sport</title>
+  <title>Guariní vence a Kingdravôs | Guariní e-sport</title>
   <meta name="description" content="Nossa equipe conquistou o primeiro lugar no torneio regional de Pokémon Unite">
   <link rel="icon" href="favicon.png" type="image/png">
   <link rel="stylesheet" href="style.css">
