git commit -m "SCRUM-43 <update na aceitação da linguagem portuguesa>"

--- a/ferramenta-cenario.html
+++ b/ferramenta-cenario.html
@@ -45,7 +45,7 @@
       <input type="text" id="jogador" class="form-control" placeholder="Ex: Fulano">
 
       <label for="dadosTexto">Cole os dados ranqueados do site aqui:</label>
-      <textarea id="dadosTexto" rows="8" class="form-control" placeholder="Cole os dados brutos do seu perfil ranqueado aqui...&#10;Exemplo:&#10;MVP&#10;**3245**&#10;Score&#10;**681539**&#10;Total Battles&#10;**7684**&#10;No. Of Wins&#10;**4678**&#10;Current Lose Streak&#10;**1**&#10;Current Win Streak&#10;**0**&#10;Win Streak Record&#10;**20**&#10;Total Eliminations&#10;**74854**"></textarea>
+      <textarea id="dadosTexto" rows="8" class="form-control" placeholder="Cole os dados brutos do seu perfil ranqueado aqui...&#10;&#10;📋 EXEMPLO EM INGLÊS:&#10;MVP&#10;**3245**&#10;Score&#10;**681539**&#10;Total Battles&#10;**7684**&#10;No. Of Wins&#10;**4678**&#10;Current Lose Streak&#10;**1**&#10;Current Win Streak&#10;**0**&#10;Win Streak Record&#10;**20**&#10;Total Eliminations&#10;**74854**&#10;&#10;📋 EXEMPLO EM PORTUGUÊS:&#10;MVP&#10;**2690**&#10;Pontuação&#10;**1071954**&#10;Batalhas totais&#10;**16460**&#10;No. de Vitórias&#10;**7563**&#10;Sequência de Derrotas Atual&#10;**0**&#10;Sequência de Vitórias Atual&#10;**1**&#10;Recorde de Sequência de Vitórias&#10;**12**&#10;Eliminações Totais&#10;**75100**"></textarea>
 
       <div class="botoes-winrate">
         <button class="btn" onclick="calcularWinrate()">Calcular Winrate</button>
