novas mudanças no layout da tabela

--- a/estatisticas-shad/show-result.html
+++ b/estatisticas-shad/show-result.html
@@ -100,11 +100,11 @@
   </div>
 </div>
 
-        <div id="topicInfo" class="w-full h-12 flex items-start">
+        <div id="topicInfo" class="w-full h-12 flex justify-center items-center">
         </div>
 
         <div class="h-full">
-            <div id="tables-container" class="flex gap-x-1.5">
+            <div id="tables-container" class="flex gap-x-1.5 justify-center">
             </div>
         </div>
         
