Título da jogada

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
         <!-- Título das jogadas -->
         <div class="jogada-titulo">
-          <span id="jogada-texto">Excelente play do nosso coach <span class="jogador">SHAD</span></span>
+          <span id="jogada-texto">Pressão no time adversário com direito a QuadraKill do <span class="jogador">DEIVID</span></span>
         </div>
 
         <!-- Indicadores (bolinhas) -->
