--- a/index.html
+++ b/index.html
@@ -86,6 +86,17 @@
 
           <div class="noticia-card-horizontal">
             <div class="noticia-imagem-horizontal">
+              <img src="./img-site/noticia3.jpg" alt="Notícia 3">
+            </div>
+            <div class="noticia-conteudo-horizontal">
+              <h3>A Guariní segue com muito foco no Brasileirão Unite Série C!</h3>
+              <p>Guariní vence a Amazon e garante a terceira vitória seguida no Brasileirão Unite!</p>
+              <a href="noticia3.html#noticia3" class="noticia-link">Leia mais</a>
+            </div>
+          </div>
+
+          <div class="noticia-card-horizontal">
+            <div class="noticia-imagem-horizontal">
               <img src="./img-site/noticia2.jpg" alt="Notícia 2">
             </div>
             <div class="noticia-conteudo-horizontal">
@@ -107,17 +118,7 @@
           </div>
           
           <!-- Notícia 3 -->
-          <!--<div class="noticia-card-horizontal">
-            <div class="noticia-imagem-horizontal">
-              <img src="./img-site/noticia3.jpg" alt="Notícia 3">
-            </div>
-            <div class="noticia-conteudo-horizontal">
-              <h3>Workshop para novos talentos</h3>
-              <p>Realizaremos um workshop gratuito para jogadores que querem entrar no cenário competitivo. Inscrições abertas!</p>
-              <a href="#" class="noticia-link">Leia mais</a>
-            </div>
-          </div>
-        </div>-->
+        </div>
         
         <!-- Coluna Direita -->
         <!--<div class="noticias-coluna">
