melhoria no título da notícia

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <img src="./img-site/noticia3.jpg" alt="Notícia 3">
             </div>
             <div class="noticia-conteudo-horizontal">
-              <h3>A Guariní segue com muito foco no Brasileirão Unite Série C!</h3>
+              <h3>Mais uma vitória da Guariní!</h3>
               <p>Guariní vence a Amazon e garante a terceira vitória seguida no Brasileirão Unite!</p>
               <a href="noticia3.html#noticia3" class="noticia-link">Leia mais</a>
             </div>
