--- a/noticia3.html
+++ b/noticia3.html
@@ -12,7 +12,7 @@
   <body>
   <div class="container">
     <header class="noticia-header">
-      <h1 class="noticia-titulo">A Guariní segue com muito foco no Brasileirão Unite Série C!</h1>
+      <h1 class="noticia-titulo">A Guariní segue com muito foco no Brasileirão Série C!</h1>
       <div class="noticia-meta">
         <span>27 de Agosto, 2025</span> • 
         <span>Por Nathália "Nath" Lima</span>
