redirecionamentos para o equipes.html

--- a/contato.html
+++ b/contato.html
@@ -14,7 +14,7 @@
       <ul>
         <li><a href="index.html">Início</a></li>
         <li><a href="sobre.html">Sobre</a></li>
-        <li><a href="times.html">Times</a></li>
+        <li><a href="equipes.html">Times</a></li>
         <li><a href="loja.html">Loja</a></li>
         <li><a href="desempenho.html">Calculadora</a></li>
         <li><a href="contato.html" class="ativo">Contato</a></li>
