--- a/sobre.html
+++ b/sobre.html
@@ -29,7 +29,7 @@
       
       <nav class="nav-group right-nav">
         <ul>
-          <li><a href="times.html">Times</a></li>
+          <li><a href="equipes.html">Times</a></li>
           <li><a href="material.html">Material</a></li>
         </ul>
       </nav>
