--- a/loja.html
+++ b/loja.html
@@ -50,7 +50,7 @@
         <ul>
           <li><a href="index.html">Início</a></li>
           <li><a href="sobre.html">Sobre</a></li>
-          <li><a href="times.html">Times</a></li>
+          <li><a href="equipes.html">Times</a></li>
           <li><a href="loja.html" class="ativo">Loja</a></li>
           <li><a href="material.html">Calculadora</a></li>
           <li><a href="contato.html">Contato</a></li>
