novos ajustes no direcionamento para a tela de equipes

--- a/loja.html
+++ b/loja.html
@@ -33,10 +33,9 @@
       <!-- Navegação Desktop - Direita -->
       <nav class="nav-group right-nav">
         <ul>
-          <li><a href="times.html">Times</a></li>
+          <li><a href="equipes.html">Times</a></li>
           <li><a href="material.html">Material</a></li>
         </ul>
-      </nav>
       
       <!-- Botão Menu Mobile -->
       <button class="menu-toggle" aria-label="Menu">
