--- a/material.html
+++ b/material.html
@@ -32,7 +32,7 @@
       <!-- Navegação Desktop - Direita -->
       <nav class="nav-group right-nav">
         <ul>
-          <li><a href="times.html">Times</a></li>
+          <li><a href="equipes.html">Times</a></li>
           <li><a href="material.html" class="ativo">Material</a></li>
         </ul>
       </nav>
