--- a/estatisticas-shad/show-result.html
+++ b/estatisticas-shad/show-result.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="./style.css" type="text/css" rel="stylesheet">
+        <link href="./show-result.css" type="text/css" rel="stylesheet">
         <script src="https://cdn.tailwindcss.com"></script>
         <style>
             html {
@@ -125,7 +126,7 @@
       <span id="filter-text" class="text-lg font-semibold text-black text-center"></span>
       
       <!-- Container dos filtros com duas colunas -->
-      <div id="filter-container" class="grid grid-cols-2 gap-y-10 gap-x-4 text-base w-full">
+      <div id="filter-container" class="grid grid-cols-2 gap-y-6 gap-x-4 text-base w-full">
         <style>
           input[type="checkbox"] {
               display: none;
