--- a/estatisticas-shad/player-profile.html
+++ b/estatisticas-shad/player-profile.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="./style.css" type="text/css" rel="stylesheet">
+        <link href="./player-profile.css" type="text/css" rel="stylesheet">
         <script src="https://cdn.tailwindcss.com"></script>
         <style>
             html {
