--- a/material.html
+++ b/material.html
@@ -96,6 +96,15 @@
         <div id="calcWinrateMessage" style="color: red; margin-top: 10px; display: none;"></div>
       </article>
 
+      <!-- Análise de Equipe -->
+      <article class="ferramenta">
+        <img src="./img-site/avaliaçao.png" alt="Análise de Equipe" />
+        <h3>Análise de Equipe</h3>
+        <p class="descricao">Organize e analise os pontos fortes e fracos da sua equipe</p>
+        <button type="button" class="btn-comprar" id="analiseBtn">Acessar</button>
+        <div id="analiseAccessMessage" style="color: red; margin-top: 10px; display: none;"></div>
+      </article>
+
     </section>
 
     <p style="text-align:center; margin-top: 2rem;">
@@ -143,9 +152,11 @@
     const calcBtn = document.getElementById("calcBtn");
     const statBtn = document.getElementById("statBtn");
     const winrateBtn = document.getElementById("winrateBtn");
+    const analiseBtn = document.getElementById("analiseBtn");
     const calcAccessMessage = document.getElementById("calcAccessMessage");
     const statAccessMessage = document.getElementById("statAccessMessage");
     const calcWinrateMessage = document.getElementById("calcWinrateMessage");
+    const analiseAccessMessage = document.getElementById("analiseAccessMessage");
 
     // Função para lidar com login
     async function handleLogin() {
@@ -194,6 +205,12 @@
     function setupWinrateAccess() {
       winrateBtn.onclick = () => window.location.href = 'ferramenta-cenario.html';
       calcWinrateMessage.style.display = 'none';
+    }
+
+    // Configura acesso à análise de equipe (sempre liberado)
+    function setupAnaliseAccess() {
+      analiseBtn.onclick = () => window.location.href = 'avaliaçaopontos.html';
+      analiseAccessMessage.style.display = 'none';
     }
 
     // Verifica permissões do usuário para estatísticas
@@ -246,6 +263,7 @@
       
       setupCalculatorAccess();
       setupWinrateAccess();
+      setupAnaliseAccess();
       
       await checkStatsPermissions(user);
     });
