ajuste no voltar

--- a/avaliaçaopontos.html
+++ b/avaliaçaopontos.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="analise-container">
-    <a href="#" class="voltar-link">← Voltar para o início</a>
+    <a href="material.html" class="voltar-link">← Voltar para o início</a>
     
     <h1>Análise de Equipe - Pokémon Unite</h1>
 
@@ -46,7 +46,7 @@
   <footer>
     <p>&copy; 2025 Guariní e-sport. Todos os direitos reservados.</p>
     <p><a href="https://linktr.ee/guariniesports" target="_blank">Conheça nossas redes sociais</a></p>
-    <p>Created by: Lobo</p>
+    <p>Created by: Lobo & Shad</p>
   </footer>
 
   <script>
