--- a/equipes.html
+++ b/equipes.html
@@ -72,7 +72,7 @@
       <!-- Staff/Corpo Técnico -->
       <article class="equipe">
         <img src="./img-site/staff.png" alt="Corpo Administrativo">
-        <h3>Corpo Técnico</h3>
+        <h3>Corpo Administrativo</h3>
         <p class="descricao">Conheça nossa equipe de gestão e coordenação</p>
         <button type="button" class="btn-comprar" id="staffBtn">Ver Detalhes</button>
       </article>
@@ -80,7 +80,7 @@
       <!-- Pokemon Unite -->
       <article class="equipe">
         <img src="./img-site/pokemonunite.png" alt="Pokémon Unite" />
-        <h3>Pokemon Unite</h3>
+        <h3>Pokémon Unite</h3>
         <p class="descricao">Nossa equipe competitiva de Pokemon Unite</p>
         <button type="button" class="btn-comprar" id="pokemonBtn">Ver Detalhes</button>
       </article>
@@ -88,7 +88,7 @@
       <!-- YugiOh -->
       <article class="equipe">
         <img src="./img-site/yugiohtcg.png" alt="Yu-Gi-Oh!" />
-        <h3>YugiOh</h3>
+        <h3>Yu-Gi-Oh!</h3>
         <p class="descricao">Nossos duelistas profissionais de Yu-Gi-Oh TCG</p>
         <button type="button" class="btn-comprar" id="yugiohBtn">Ver Detalhes</button>
       </article>
