alteração no css mobile

--- a/estatisticas-shad/show-result.html
+++ b/estatisticas-shad/show-result.html
@@ -178,7 +178,7 @@
 
             <!-- Segunda linha: Painel de Recordes do Player (apenas se for perfil individual) -->
             <div class="role-panels-container">
-                <div id="playerRecordsInfo" class="shadow-md rounded-lg flex flex-col justify-start border border-gray-300 bg-transparent p-3" style="display: none;">
+                <div id="playerRecordsInfo" class="shadow-md rounded-lg flex flex-col justify-start border border-gray-300 bg-transparent p-3">
                     <h3 class="info-panel-title">Recordes do Jogador</h3>
                     <div id="playerRecordsContent">
                         <!-- Conteúdo gerado via JS -->
