adicionando att de mobile no pokemon-result

--- a/estatisticas-shad/pokemon-result.html
+++ b/estatisticas-shad/pokemon-result.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Dashboard com estatísticas e dados dos Pokémon no Pokémon Unite" />
     <title>Dashboard Pokémon - Pokémon Unite</title>
     <link href="./style.css" type="text/css" rel="stylesheet" />
+    <link href="./pokemon-result.css" type="text/css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
@@ -29,7 +30,7 @@
     </div>
 
     <!-- SEÇÕES INFERIORES -->
-    <div class="h-screen overflow-y-auto flex flex-wrap gap-x-56 gap-y-8 pl-8 pt-6" style="background-image: url('./images/backgrounds/backgroundblack.jpg'); background-size: cover; background-position: center;">
+    <div class="h-screen overflow-y-auto flex flex-wrap gap-x-56 gap-y-8 pl-8 pt-6" style="background-image: url('./images/backgrounds/index-background.png'); background-size: cover; background-position: center;">
 
       <!-- Box padrão -->
       <div class="relative">
