--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
         <!-- Título das jogadas -->
         <div class="jogada-titulo">
-          <span id="jogada-texto">Pressão no time adversário com direito a QuadraKill do <span class="jogador">DEIVID</span></span>
+          <span id="jogada-texto">Penta de pocotó do <span class="jogador">DEIVID</span></span>
         </div>
 
         <!-- Indicadores (bolinhas) -->
