removendo o nome calculadora na versão mobile

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <li><a href="sobre.html">Sobre</a></li>
           <li><a href="times.html">Times</a></li>
           <li><a href="loja.html">Loja</a></li>
-          <li><a href="material.html">Calculadora</a></li>
+          <li><a href="material.html">Material</a></li>
           <li><a href="contato.html">Contato</a></li>
         </ul>
       </nav>
