--- a/loja.html
+++ b/loja.html
@@ -51,7 +51,7 @@
           <li><a href="sobre.html">Sobre</a></li>
           <li><a href="equipes.html">Times</a></li>
           <li><a href="loja.html" class="ativo">Loja</a></li>
-          <li><a href="material.html">Calculadora</a></li>
+          <li><a href="material.html">Material</a></li>
           <li><a href="contato.html">Contato</a></li>
         </ul>
       </nav>
